<resources>
    <string name="app_name">FoodieApp</string>
    <string name="action_settings">Settings</string>

    <string name="tv_title_placeholder">Meal Title</string>
    <string name="tv_description_placeholder">Meal Description</string>
    <string name="tv_ingredients_placeholder">Meal Ingredients</string>
    <string name="tv_calories_placeholder">Meal Calories</string>
    <string name="photo_of_a_meal_CD">photo of a meal</string>
    <string name="tv_web_link">Web Link</string>
    <string name="tv_add_title">Title:</string>
    <string name="add_enter_meal_title">Enter Meal Title</string>
    <string name="add_calories">Calories:</string>
    <string name="add_enter_ingredients">Enter Ingredients</string>
    <string name="add_enter_calories">Enter Calories</string>
    <string name="add_enter_link">Enter Link</string>
    <string name="add_description">Description</string>
    <string name="add_enter_a_description">Enter A Description</string>
    <string name="btn_done_text">DONE</string>
    <string name="add_web_link">Web Link:</string>
    <string name="add_ingredients">Ingredients:</string>


    <string-array name="meal_titles">
        <item>Hamburger</item>
        <item>Chicken Skewers</item>
        <item>Roasted Chicken</item>
        <item>Chicken Wings </item>
        <item>Salmon</item>

    </string-array>

    <string-array name="meal_description">
        <item> Best hamburger ever </item>
        <item>Greek-inspired chicken skewers</item>
        <item>Juicy Roasted chicken </item>
        <item>Spicy and air-fried to a crisp Korean wings. </item>
        <item>Lemon dill Salmon with Garlic, White Wine, and Butter Sauce</item>

    </string-array>

    <string-array name="meal_ingredients">
        <item>
            \n\t1 1/2 pounds lean ground beef
            \n\t1/2 onion, finely chopped
            \n\t1/2 cup shedded Colby Jack or Cheddar
            \n\tCheese
            \n\t1 teaspoon Worcestershire sauce
            \n\t1 Egg
            \n\t1 (1 Ounce) envelope dry onion soup mix
            \n\t1 clove garlic, minced
            \n\t1 tablespoon dried parsley
            \n\t1 teaspoon Basel
            \n\t1 teaspoon dried oregano
            \n\t1/2 teaspoon crushed dried rosemary
            \n\tSalt and pepper to taste
        </item>

        <item>
            \n\t¼ cup lemon juice
            \n\t¼ cup wok oil
            \n\t⅛ cup red wine vinegar
            \n\t1 tablespoon onion flakes
            \n\t1 tablespoon minced garlic
            \n\t1 lemon, zested
            \n\t1 teaspoon Greek seasoning
            \n\t1 teaspoon poultry seasoning
            \n\t1 teaspoon dried oregano
            \n\t1 teaspoon ground black pepper
            \n\t½ teaspoon dried thyme
            \n\t3 skinless, boneless chicken breasts,
            \n\t\tor as needed, cut into 1-inch pieces
            \n\t8 bamboo skewers, or as needed,soaked
            \n\tin water for 30 minutes
        </item>

        <item>
            \n\t1 (3 pound) whole chicken, giblets removed
            \n\t\tsalt and black pepper to taste
            \n\t1 tablespoon onion powder, or to taste
            \n\t½ cup margarine, divided
            \n\t1 stalk celery, leaves removed
        </item>

        <item>
            \n\nSauce:
            \n\t¼ cup hot honey (such as Mike\'s Hot Honey)
            \n\t3 tablespoons gochujang (Korean hot pepper paste)
            \n\t1 tablespoon brown sugar
            \n\t1 tablespoon soy sauce
            \n\t1 teaspoon lemon juice
            \n\t2 teaspoons minced garlic
            \n\t1 teaspoon minced fresh ginger root
            \n\t½ teaspoon salt
            \n\t¼ teaspoon black pepper
            \n\t¼ cup finely chopped green onions (green part only)
            \n\nWings:
            \n\t2 pounds chicken wings
            \n\t1 teaspoon salt
            \n\t1 teaspoon garlic powder
            \n\t1 teaspoon onion powder
            \n\t ½ teaspoon black pepper
            \n\t ½ cup cornstarch
            \n\nGarnish:
            \n\t2 tablespoons chopped green onions
            \n\t1 teaspoon sesame seeds
        </item>

        <item>
            \n\t¼ cup butter, melted
            \n\t¼ cup white wine
            \n\t1 lemon, juiced
            \n\t5 cloves garlic, chopped
            \n\t1 bunch fresh dill, stems trimmed
            \n\t1 (1 pound) salmon fillet
            \n\t½ cup toasted almonds

        </item>
    </string-array>

    <string-array name="meal_calories">
        <item>445</item>
        <item>248</item>
        <item>423</item>
        <item>347</item>
        <item>316</item>
    </string-array>

    <string-array name="meal_images">
        <item>@drawable/img_hamburger</item>
        <item>@drawable/img_greek_skewers</item>
        <item>@drawable/img_roasted_chicken</item>
        <item>@drawable/img_chicken_wings</item>
        <item>@drawable/img_salmon</item>
    </string-array>

    <string-array name="meal_web_link">
        <item>https://www.allrecipes.com/recipe/72657/best-hamburger-ever/</item>
        <item>https://www.allrecipes.com/recipe/273864/greek-chicken-skewers/</item>
        <item>https://www.allrecipes.com/recipe/83557/juicy-roasted-chicken/</item>
        <item>https://www.allrecipes.com/recipe/273764/air-fried-korean-chicken-wings/</item>
        <item>https://www.allrecipes.com/recipe/254817/lemon-dill-salmon-with-garlic-white-wine-and-butter-sauce/</item>
    </string-array>

    <string-array name="default_image">
        <item>@drawable/img_default</item>
    </string-array>

</resources>