<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_placeholder"
            android:padding="10dp"
            style="@style/MealTitle"/>

        <ImageView
            android:id="@+id/imageViewMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/photo_of_a_meal_CD" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_description_placeholder"
            android:padding="10dp"
            style="@style/MealDescriptionTitle"/>

        <TextView
            android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_calories_placeholder"
            android:padding="10dp"
            style="@style/MealCaloriesText"
            />

        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_web_link"
            android:inputType=""
            android:clickable="true"
            android:padding="10dp"
            style="@style/MealLinkText"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_ingredients_placeholder"
                android:padding="10dp"
                style="@style/MealIngredientsText"/>

        </ScrollView>

    </LinearLayout>


</androidx.cardview.widget.CardView>